cert-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-tutorial
spec:
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
  selector:
    app: react-tutorial
