cert-manager/ingress-tls-final.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01

spec:
  tls:
    - hosts:
        - brunokrebs.com
      secretName: quickstart-example-tls
  rules:
    - host: brunokrebs.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kuard
              servicePort: 80
